[project]
name = "external-utilities"
version = "1.0"
requires-python = ">=3.14"
dependencies = [
    "python-openstackclient",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
tox = "*"
tox-current-env = "*"
black = "*"
ruff = "*"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
